
=======================================================
            WanT code:  Log of Changes 
=======================================================


11 Mar 2007      Documentation about blc2wan.f90, dos.f90, conductor.f90 updated. (AF)

09 Mar 2007      Self-energy stuff added in dos.f90 (some special cases not yet implemented);
                 operator_moduel added to wannier/ ; general driver for matrix inversion
                 added to util.f90; lapack_all.f90 and lapack_atlas.f90 libs updated. 
                 When reading dynamical self-energies, dos.x and conductor.x overwirte
                 the input energy grids with those from file. (AF)

08 Mar 2007      Further updates in blc2wan.f90; input summary added, output results checked. 
                 Routine compute_kham.f90 added to wannier/ , dos.f90 updated to read and
                 manage a generic self-energy from input. Test06 slightly changed, 
                 references updated. (AF)

07 Mar 2007      Updates in blc2wan.f90; output format changed in summary.f90; 
                 test08 updated and example of use of blc2wan.x added. (AF)

02 Mar 2007      log_push and log_pop added in all the routines of transport/. (BB)

27 Feb 2007      Parallelization of conductor implemented, divide_et_impera.f90 added. (AF)

26 Feb 2007      Long standing bug in the midpoint.f90 algorithm fixed. (AF)

20 Feb 2007      Normalization of WFs from plot.f90 further tested. nr1, nr2, nr3 vars
                 added to plot namelist to interpolate by FFT on finer real space meshes.
                 Documentation updated: README.input file split code by code, description
                 of input files deleted from the pdf manual for ease of maintainance. (AF)

09 Feb 2007      Normalization of WFs written by plot.f90 fixed. (AF)

01 Feb 2007      Cleanup in utility/sumpdos.f90 . (AF)

16 Jan 2007      configure_iotk* and iotk_config.h.in updated. make.depend files added to