@@ -37,11 +37,6 @@ work_dir      STRING
               the scratch directory where the massive data file will be written
               DEFAULT: "./"
 
-verbosity     STRING
-              ( "low" | "medium" | "high" )
-              the level of detail of the code output
-              DEFAULT: "medium"
-
 nkpts_in      INTEGER
               number of edge kpts defining the directions on which bands will
               be calculated
@@ -51,11 +46,10 @@ nkpts_max     INTEGER
               maximum number of interpolated kpoints
               DEFAULT: 100
 
-spin_component    STRING
-              ( "up" | "down" | "none" )
-              define whether the calculation is spin polarized and if the case
-              which spin component is to be treated. 
-              DEFAULT: "none"
+use_nn(3)     LOGICAL
+              if .TRUE. along direction i, only nearest neighbors Hamiltonians along i
+              are used to compute bands. Useful to compare with transport calculation.
+              DEFAULT : .FALSE., .FALSE., .FLASE.
 
 
 ==============================================================================
