@@ -7,5 +7,4 @@
    wann = '1,4'
    r3min = -1.0
    r3max =  1.0
-   spin_component = 'DOWN'
  /
